--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.24.7",
     "@babel/plugin-transform-modules-commonjs": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.12.1",
@@ -27,9 +27,12 @@
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^5.0.0",
     "babel-jest": "workspace:^",
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
     "camelcase": "^6.2.0",
     "chalk": "^4.0.0",
     "chokidar": "^3.3.0",
+    "common-shakeify": "^1.1.2",
     "dedent": "^1.0.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -41,6 +44,7 @@
     "eslint-plugin-local": "link:./.eslintplugin",
     "eslint-plugin-markdown": "^3.0.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "esmify": "^2.1.1",
     "execa": "^5.0.0",
     "find-process": "^1.4.1",
     "glob": "^10.0.0",
@@ -78,6 +82,7 @@
     "strip-ansi": "^6.0.0",
     "strip-json-comments": "^3.1.1",
     "tempy": "^1.0.0",
+    "tinyify": "^4.0.0",
     "ts-node": "^10.5.0",
     "typescript": "^5.0.4",
     "which": "^3.0.0"
@@ -85,6 +90,7 @@
   "scripts": {
     "build-clean": "rimraf --glob './packages/*/build' './packages/*/dist' './packages/*/tsconfig.tsbuildinfo' './packages/*/api-extractor.json' './api-extractor.json'",
     "build": "yarn build:js && yarn build:ts && yarn bundle:ts",
+    "build:expect": "yarn run browserify packages/expect/build/index.js --standalone jest",
     "build:js": "node ./scripts/build.mjs",
     "build:ts": "node ./scripts/buildTs.mjs",
     "bundle:ts": "node ./scripts/bundleTs.mjs",
