--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chalk": "^4.0.0",
     "chokidar": "^3.3.0",
     "common-shakeify": "^1.1.2",
+    "deamdify": "^0.3.0",
     "dedent": "^1.0.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -90,7 +91,7 @@
   "scripts": {
     "build-clean": "rimraf --glob './packages/*/build' './packages/*/dist' './packages/*/tsconfig.tsbuildinfo' './packages/*/api-extractor.json' './api-extractor.json'",
     "build": "yarn build:js && yarn build:ts && yarn bundle:ts",
-    "build:expect": "yarn run browserify packages/expect/build/index.js --standalone jest",
+    "build:expect": "yarn run browserify expect.js",
     "build:js": "node ./scripts/build.mjs",
     "build:ts": "node ./scripts/buildTs.mjs",
     "bundle:ts": "node ./scripts/bundleTs.mjs",
